IMC-2683 Exchange rate formatter (#1274)
* IMC-2683 - result formatter rate service

* IMC-2683 - rubocop addressed

* IMC-2683 - feedback addressed & logic placed in controllers

* IMC-2683 - abstraction & reduce on shipments show

* IMC-2683 - fix specs

* IMC-2683 - add exchangeRate key to tender serializer

* IMC-2683 - remove unwanted code

* IMC-2683 - final comments addressed

* IMC-2683 - fix rubocop

* IMC-2683 - update api documentation

* IMC-2683 - fix indent issues
